--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,21 @@
 @font-face {
-  font-family: 'silkaregular';
-  src: url('fonts/silka-regular-webfont.woff') format('woff');
+  font-family: "silkaregular";
+  src: url("fonts/silka-regular-webfont.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'silkaitalic';
-  src: url('fonts/silka-regularitalic-webfont.woff') format('woff');
+  font-family: "silkaitalic";
+  src: url("fonts/silka-regularitalic-webfont.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
 
 body {
   margin: 0;
-  font-family: 'silkaregular', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: "silkaregular", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -23,6 +23,6 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
